--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   font-family: "poppins", "sans-serif";
   box-sizing: border-box;
 }
+
+html{
+    scroll-behavior: smooth;
+}
+
 body {
   background-color: black;
   color: white;
