--- a/style.css
+++ b/style.css
@@ -96,9 +96,6 @@ nav ul li a:hover:after {
   font-size: 20px;
 }
 .header-text h1 {
-  /* font-size: 60px;
-    margin-top: 10px;  */
-
   font-size: 60px;
   margin-top: 10px;
 }
@@ -223,7 +220,7 @@ nav ul li a:hover:after {
   overflow: hidden;
 }
 .work img {
-  display: grrid;
+  display: grid;
   border-radius: 10px;
   width: 100%;
   height: auto;
@@ -247,7 +244,7 @@ nav ul li a:hover:after {
   transition: height 0.5s;
 }
 .layeres h1 {
-  font-weight: 500;
+  font: weight 400px; ;
   margin: bottom 20px;
 }
 .layeres a {
@@ -406,6 +403,7 @@ form .btn {
     height: 80vh;
   }
 
+
   .header-text h1 {
     font-size: 30px;
     margin-top: 10px;
@@ -458,5 +456,13 @@ form .btn {
   nav ul li {
     display: block;
     margin: 20px;
+  }
+  .layeres a i{
+    display: none;
+   
+
+  }
+  .layeres h1{
+    font-size: 2em;
   }
 }
